# Intel_Gaudi3_Software

./: README.md  habana_set_env_val.sh
3rd-parties/libarchive/: .gitignore  CMakeLists.txt  Makefile.am
3rd-parties/libarchive/libarchive/: CMakeLists.txt  archive.h  archive_read_append_filter.c  archive_read_open_filename.c  archive_read_private.h  archive_read_set_format.c  archive_string.c  archive_version_details.c  archive_write_add_filter.c  archive_write_set_format.c  archive_write_set_format_zip.c
func-sim/agents/irt/: CMakeLists.txt
mme/: .clang-format  .clang-tidy  .clangd  .gitignore  .reviewboardrc  CMakeLists.txt  README.md
mme/cmake/: DisableAVX512.cmake  SeparateDebugSymbols.cmake  compilation_flags.cmake  findCoralSim.cmake  sim_depend.cmake  syn_depend.cmake
mme/include/: containers.h  defs.h  general_utils.h  json.hpp  mme_access_pattern.h  mme_aspects.h  mme_assert.h  settable.h  utils.h
mme/include/gaudi/: gaudi_utils.h  mme_agu_stat.h  mme_descriptor_generator.h
mme/include/gaudi2/: gaudi2_defs.h  gaudi2_mme_signal_info.h  gaudi2_utils.h  mme_descriptor_generator.h
mme/include/gaudi3/: gaudi3_defs.h  gaudi3_mme_signal_info.h  mme_descriptor_generator.h
mme/include/mme_common/: conv_sub_problems.h  descriptor_cache.h  mme_brain.h  mme_common_enum.h  mme_descriptor_generator_base.h  mme_signal_info.h  recipe.h  recipe_generator.h  recurring_misalignment_opt.h  skip_data.h  workarounds.h
mme/include/sync/: data_range.h  overlap.h  overlap.inl  segments_space.h
mme/include/utils/: descriptor_dumper.h  gaudi2_desc_dumper.h  gaudi3_desc_dumper.h  gaudi_desc_dumper.h  iterators.h  mme_global_conf_manager.h
mme/mme_reference/: CMakeLists.txt  convolution_params.h  im2col.cpp  im2col.h  mme_reference.h  mme_reference_impl.cpp  mme_reference_impl.h  sim_tensor.cpp  sim_tensor.h  sim_tensor_base.cpp  sim_tensor_base.h  tensor_comparator.h  tensor_comparator_impl.cpp  tensor_comparator_impl.h
mme/mme_reference/chip_fma/: chip_fma.cpp  chip_fma.h  gaudi2_fma.cpp  gaudi2_fma.h  gaudi3_fma.cpp  gaudi3_fma.h  gaudi_fma.cpp  gaudi_fma.h
mme/mme_reference/data_types/: bfloat16.h  fp16.h  fp32.h  fp8.h  half.hpp  i4_data_type.h  iacc_data_type.h  non_standard_dtypes.h  tf32.h
mme/mme_verification/: CMakeLists.txt
mme/mme_verification/common/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  config_parser.cpp  config_parser.h  create_mme_gaudi_test.py  device_handler.cpp  device_handler.h  make_verification_tests.py  mme_code_generation.cpp  mme_code_generation.h  mme_coralhbw_sniffer.cpp  mme_coralhbw_sniffer.h  mme_corallbw_sniffer.cpp  mme_corallbw_sniffer.h  mme_mem_access_checker.cpp  mme_mem_access_checker.h  mme_reg_write_cmd.h  mme_test.cpp  mme_test.h  mme_test_data_gen.cpp  mme_test_data_gen.h  mme_test_global_conf.cpp  mme_test_global_conf.h  mme_test_manager.cpp  mme_test_manager.h  mme_user.cpp  mme_user.h  sync_object_manager.cpp  sync_object_manager.h  utils.cpp  utils.h
mme/mme_verification/gaudi/: CMakeLists.txt
mme/mme_verification/gaudi2/: CMakeLists.txt
mme/mme_verification/gaudi3/: CMakeLists.txt
mme/src/: CMakeLists.txt
mme/src/gaudi/: gaudi_defs.h  gaudi_geo_attr.cpp  gaudi_geo_attr.h  gaudi_linear_ranges.cpp  gaudi_linear_ranges.h  gaudi_mme_hal_reader.cpp  gaudi_mme_hal_reader.h  gaudi_utils.cpp  mme_agu_stat.cpp  mme_descriptor_generator_conv.cpp
mme/src/gaudi2/: agu_iterator.cpp  agu_iterator.h  gaudi2_agu_config.cpp  gaudi2_agu_config.h  gaudi2_geo_attr.cpp  gaudi2_geo_attr.h  gaudi2_linear_ranges.cpp  gaudi2_linear_ranges.h  gaudi2_mme_hal_reader.cpp  gaudi2_mme_hal_reader.h  gaudi2_mme_signal_info.cpp  gaudi2_sbreuse.cpp  gaudi2_sbreuse.h  gaudi2_utils.cpp  mme_agu_simulator.cpp  mme_agu_simulator.h  mme_descriptor_generator.cpp
mme/src/gaudi3/: gaudi3_agu_config.cpp  gaudi3_agu_config.h  gaudi3_geo_attr.cpp  gaudi3_geo_attr.h  gaudi3_mme_hal_reader.cpp  gaudi3_mme_hal_reader.h  gaudi3_mme_signal_info.cpp  gaudi3_sbreuse.cpp  gaudi3_sbreuse.h  gaudi3_utils.cpp  gaudi3_utils.h  mme_descriptor_generator.cpp  mme_hard_coded_descriptor.cpp
mme/src/mme_common/: access_pattern_factory.cpp  access_pattern_parallelism.cpp  access_pattern_parallelism.h  access_pattern_utils.h  aspect_factory.cpp  common_agu_config.cpp  common_agu_config.h  common_geo_attr.cpp  common_geo_attr.h  common_linear_ranges.cpp  common_linear_ranges.h  common_sbreuse.cpp  common_sbreuse.h  conv_sub_problems.cpp  descriptor_cache.cpp  index_space_dimensions.h  memory_config.cpp  memory_config.h  mme_assert.cpp  mme_brain.cpp  mme_common_utils.cpp  mme_common_utils.h  mme_descriptor_cache_utils.h  mme_descriptor_generator_base.cpp  mme_geo_factory.h  mme_global_conf.cpp  mme_global_conf.h  mme_global_conf_item.h  mme_hal_factory.h  mme_hal_reader.h  mme_params_dumper.cpp  mme_params_dumper.h  mme_params_factory.h  mme_signal_info.cpp  multipliers_generator.cpp  multipliers_generator.h  operand_access.cpp  operand_access.h  print_utils.cpp  (+6 more)
mme/tests/: CMakeLists.txt
scal/: CMakeLists.txt  README.md
scal/format/: format.sh
scal/include/: scal.h  scal_shim_if.h
scal/src/: CMakeLists.txt  version.cpp.in
scal/tests/: CMakeLists.txt  json_update_masks_test.cpp  scal_allocator_test.cpp  scal_basic_flow.cpp  scal_basic_test.cpp  scal_basic_test.h  scal_gaudi2_sync_monitor.cpp  scal_gaudi2_sync_monitor.h  scal_gaudi2_test_nic_basic.cpp  scal_gaudi3_sync_monitor.cpp  scal_gaudi3_sync_monitor.h  scal_gaudi3_test_nic_basic.cpp  scal_test_api.cpp  scal_test_compute_ecblist.cpp  scal_test_config.cpp  scal_test_fence.cpp  scal_test_macros.h  scal_test_nic_basic.cpp  scal_test_nic_basic.hpp  scal_test_override.cpp  scal_test_pdma.cpp  scal_test_pdma_new.cpp  scal_test_stream_sync.cpp
scal/utils/: scal_debug_tools.h  scal_test_pqm_pkt_utils.cpp  scal_test_pqm_pkt_utils.h  scal_test_utils.cpp  scal_test_utils.h  scal_tests_helper.cpp  scal_tests_helper.h  wscal.cpp  wscal.h
swtools_sdk/hl_gcfg/: CMakeLists.txt
synapse/doc/: CMakeLists.txt  README.md
synapse/src/: CMakeLists.txt  version.cpp.in
synapse/tests/: CMakeLists.txt
(+3774 files in other folders)
